--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Makhmudbek Jumaniyazov</h1>
+      <h1>Makhmudbek </h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer, "></span></p>
       <div class="social-links">
         <a href="https://t.me/Makhmudbek29" class="Telegram"><i class="fab fa-telegram-plane"></i></a>
@@ -617,7 +617,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>End Testimonials Section
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
