--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">BuyHhostings and Domens</a></h4>
+              <h4><a href="">Buy hostings and Domens</a></h4>
               <p>I will buy reliable domains and hosting for you at cheap prices</p>
             </div>
           </div>
